--- a/day1/Script1.ipynb
+++ b/day1/Script1.ipynb
@@ -32,13 +32,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "with open('./input1.txt', 'r') as file:\n",
     "\n",
     "    data = file.readlines()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Calculation"
    ]
   },
   {
@@ -76,12 +83,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Puzzle 2: Summ of fuel requirements including fuel mass"
+    "# Puzzle 2: Sum of fuel requirements including fuel mass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
