--- a/day2/Script2.ipynb
+++ b/day2/Script2.ipynb
@@ -106,6 +106,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### solution = 100*noun+verb"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 67,
    "metadata": {},
