--- a/day16/Script16.ipynb
+++ b/day16/Script16.ipynb
@@ -224,8 +224,7 @@
     "        newnumber.append(int(str(next_digit)[-1]))\n",
     "    number = np.array(deepcopy(newnumber))\n",
     "digits = ''\n",
-    "digits = digits.join([str(x) for x in number])\n",
-    "print('The first eight digits are {0}.'.format(digits[0:8]))"
+    "digits = digits.join([str(x) for x in number])"
    ]
   },
   {
@@ -254,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 238,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 239,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 240,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 241,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,29 +292,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 242,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "528277"
-      ]
-     },
-     "execution_count": 235,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The first eight digits are 91689380.\n"
+     ]
     }
    ],
-   "source": [
-    "len(number)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "for iteration in range(0, 100):\n",
     "    newnumber = np.cumsum(number[::-1]) % 10\n",
@@ -323,241 +310,6 @@
     "digits = ''\n",
     "digits = digits.join([str(x) for x in number])\n",
     "print('The first eight digits are {0}.'.format(digits[0:8]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 229,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([9, 1, 6, 8, 9, 3, 8, 0], dtype=int32)"
-      ]
-     },
-     "execution_count": 229,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "number[0:8]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 199,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-199-c869524c00ed>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnumber\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m         \u001b[0mpat\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mrepeat_pattern\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpattern\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mi\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnumber\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m         \u001b[0mnext_digit\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msum\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmultiply\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnumber\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0masarray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpat\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m         \u001b[0mnewnumber\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnext_digit\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m     \u001b[0mnumber\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdeepcopy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnewnumber\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
-   "source": [
-    "for j in range(0, 100):\n",
-    "    newnumber = []\n",
-    "    print(j)\n",
-    "    for i in range(1, len(number)+1):\n",
-    "        pat = repeat_pattern(pattern, i, len(number))\n",
-    "        next_digit = sum(np.multiply(number, np.asarray(pat)))\n",
-    "        newnumber.append(int(str(next_digit)[-1]))\n",
-    "    number = np.array(deepcopy(newnumber))\n",
-    "digits = ''\n",
-    "digits = digits.join([str(x) for x in number])\n",
-    "print('The first eight digits are {0}.'.format(digits[int(digits[0:7]):int(digits[0:7])+8]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 198,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5867213"
-      ]
-     },
-     "execution_count": 198,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "int(digits[0:7])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class moon_simulator(object):\n",
-    "    \n",
-    "    def __init__(self, coordinate_list):\n",
-    "        \n",
-    "        self.coordinate_list = coordinate_list\n",
-    "        self.velocity_list = np.zeros(coordinate_list.shape)\n",
-    "        self.number_planets = len(coordinate_list)\n",
-    "        \n",
-    "    def step(self):\n",
-    "        \n",
-    "        for i, coordinates in enumerate(self.coordinate_list):\n",
-    "            smaller = (coordinates < np.delete(self.coordinate_list, i, 0)).astype(int)\n",
-    "            equal = (coordinates == np.delete(self.coordinate_list, i, 0)).astype(int)\n",
-    "            # mapping: y/(num_pl-1) + 2*(num_pl-1) - (num_pl-1)\n",
-    "            delta_vel = sum(smaller)*2-(self.number_planets-1)+sum(equal)\n",
-    "            self.velocity_list[i] += delta_vel\n",
-    "            \n",
-    "        self.coordinate_list += self.velocity_list\n",
-    "        \n",
-    "    def energy(self):\n",
-    "        \n",
-    "        self.e_p = np.sum(abs(self.coordinate_list), 1)\n",
-    "        self.e_k = np.sum(abs(self.velocity_list), 1)\n",
-    "        self.e = np.sum(self.e_p*self.e_k)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The energy of the system after 1000 steps is 7179.0.\n"
-     ]
-    }
-   ],
-   "source": [
-    "steps = 1000\n",
-    "moons = moon_simulator(deepcopy(coordinate_list))\n",
-    "for i in range(0, steps):\n",
-    "    moons.step()\n",
-    "\n",
-    "moons.energy()\n",
-    "print('The energy of the system after {0} steps is {1}.'.format(steps, moons.e))\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Puzzle 2: N-body problem - calculate length of period"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### all the axes are independent, so we can split the system; whole period is the least common multiple of all three periods"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### at first, set up a moon simulator for each axis and store the initial state"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "simulator_dict = dict()\n",
-    "states_init_dict = dict()\n",
-    "for i in range(0, len(coordinate_list[0])):\n",
-    "    simulator_dict['{0}'.format(i)] = moon_simulator(deepcopy(coordinate_list[:, i].reshape(-1, 1)))\n",
-    "    states_init_dict['{0}'.format(i)] = np.append(simulator_dict['{0}'.format(i)].coordinate_list,\n",
-    "                                                 simulator_dict['{0}'.format(i)].velocity_list)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### now, simulate the systems until they reach their initial state and calculate the lcm"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def lcm(values):\n",
-    "    multiple = values[0]\n",
-    "    for i in range(1, len(values)):\n",
-    "        multiple = multiple*values[i] // gcd(multiple, values[i])\n",
-    "    return multiple"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The period length of the system is 428576638953552.\n"
-     ]
-    }
-   ],
-   "source": [
-    "periods = []\n",
-    "for key in simulator_dict.keys():\n",
-    "    state = np.zeros(states_init_dict[key].shape)\n",
-    "    period = 0\n",
-    "    while sum(states_init_dict[key] == state) != len(states_init_dict[key]):\n",
-    "        simulator_dict[key].step()\n",
-    "        state = np.append(simulator_dict[key].coordinate_list, simulator_dict[key].velocity_list)\n",
-    "        period += 1\n",
-    "    periods.append(period)\n",
-    "print('The period length of the system is {0}.'.format(lcm(periods)))"
    ]
   },
   {
